ingress/kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-ingress
  labels: 
    app: kubernete
  namespace: ingress-nginx
spec:
  rules:
  - host: kubernete.io
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
